fix: use PUBLIC_URL for background images in CSS
CSS files in src/ cannot resolve absolute paths to public assets during
webpack build. Updated background-image URLs to use %PUBLIC_URL% which
gets replaced by Create React App during build.

Changes:
- Updated paper_1_portrait.jpg references to use %PUBLIC_URL%
- Updated paper_1_landscape.jpg reference to use %PUBLIC_URL%
- Fixes ModuleNotFoundError during build process

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -432,7 +432,7 @@
 
 @media (max-width: 576px) {
     .chocolate {
-        background-image: url('/images/paper_1_portrait.jpg');
+        background-image: url('%PUBLIC_URL%/images/paper_1_portrait.jpg');
     }
 
     .mgSmFont {
@@ -459,7 +459,7 @@
 
 @media (min-width: 576px) {
     .chocolate {
-        background-image: url('/images/paper_1_portrait.jpg');
+        background-image: url('%PUBLIC_URL%/images/paper_1_portrait.jpg');
     }
 
     .filling {
@@ -481,7 +481,7 @@
 
 @media (min-width: 992px) {
     .chocolate {
-        background-image: url('/images/paper_1_landscape.jpg');
+        background-image: url('%PUBLIC_URL%/images/paper_1_landscape.jpg');
         background-size: 100%;
     }
 
