fix: use CSS custom properties for background images
CSS files cannot use %PUBLIC_URL% or resolve public assets directly during
webpack build. Fixed by setting CSS custom properties in JavaScript that
reference the public URL, then using those variables in CSS.

Changes:
- Set --bg-portrait and --bg-landscape CSS variables in index.js
- Updated CSS to use var(--bg-portrait) and var(--bg-landscape)
- Prevents webpack from trying to resolve image paths at build time
- Fixes ModuleNotFoundError during build process

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -432,7 +432,7 @@
 
 @media (max-width: 576px) {
     .chocolate {
-        background-image: url('%PUBLIC_URL%/images/paper_1_portrait.jpg');
+        background-image: var(--bg-portrait);
     }
 
     .mgSmFont {
@@ -459,7 +459,7 @@
 
 @media (min-width: 576px) {
     .chocolate {
-        background-image: url('%PUBLIC_URL%/images/paper_1_portrait.jpg');
+        background-image: var(--bg-portrait);
     }
 
     .filling {
@@ -481,7 +481,7 @@
 
 @media (min-width: 992px) {
     .chocolate {
-        background-image: url('%PUBLIC_URL%/images/paper_1_landscape.jpg');
+        background-image: var(--bg-landscape);
         background-size: 100%;
     }
 
